# manual-polare

./: .readthedocs.yaml  pyproject.toml  tasks.py
docs/: avaliacao-plano-trabalho-servidor.rst  cadastro-plano-entrega-unidade.rst  conf.py  entregas.rst  erros-plano-trabalho.rst  erros-planos-entrega-unidade.rst  homologacao-plano-entrega.rst  index.rst  justificativa-plano-trabalho-nao-finalizado.rst  plano-entrega-unidade.rst  plano-trabalho-servidor.rst  plano_gerencial.rst  plano_individual.rst  relatorios.rst
docs/static/css/: docs.css
docs/static/js/: main.js
